# twinn-ml-interface

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  build-package.yml  pyproject.toml
.github/workflows/: changelog_update.yml  linting.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  validate_pipeline.yml
tests/: test_input_data_class.py  test_logging.py  test_mocks.py
tutorials/: tutorial_configuration.ipynb  tutorial_input_data.ipynb
tutorials/tutorial_data/: mock_data.parquet
twinn_ml_interface/: _version.py
twinn_ml_interface/input_data/: __init__.py  input_data.py  utils.py
twinn_ml_interface/interface/: __init__.py  model_interfaces.py  model_test.py
twinn_ml_interface/interface_validation/: test_model_interface.py
twinn_ml_interface/mocks/: __init__.py  mocks.py
twinn_ml_interface/objectmodels/: AnnotationProtocol.py  Exceptions.py  HierarchyClasses.py  InputDataClass.py  Logging.py  ModelFlags.py  __init__.py  configuration.py  hierarchy.py  hierarchy_classes.py  input_data.py  input_data_classes.py  logging.py  model_flags.py  unit_tags.py
twinn_ml_interface/tests/: test_input_data_class.py  test_logging.py  test_model_interface.py  test_protocol.py
